--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "bootstrap": "^5.2.3",
+        "bootstrap-vue": "2.0.0-rc.20",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.0.13"
