--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "bootstrap": "^5.2.3",
+        "bootstrap-table": "^1.21.2",
         "bootstrap-vue": "2.0.0-rc.20",
+        "jquery": "^3.6.3",
+        "popper.js": "^1.16.1",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.0.13"
