--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
         "bootstrap": "^5.2.3",
         "bootstrap-table": "^1.21.2",
         "bootstrap-vue": "2.0.0-rc.20",
+        "datatables.net-bs5": "^1.13.1",
+        "datatables.net-buttons-bs5": "^2.3.3",
         "jquery": "^3.6.3",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.7",
         "popper.js": "^1.16.1",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
