--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jszip": "^3.10.1",
         "pdfmake": "^0.2.7",
         "popper.js": "^1.16.1",
+        "sweetalert": "^2.1.2",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.0.13"
